# Quack

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
docs/: CameraComponent_8hpp.html  CameraComponent_8hpp.js  CameraComponent_8hpp_source.html  Color8_8hpp.html  Color8_8hpp.js  Color8_8hpp_source.html  Color_8hpp.html  Color_8hpp.js  Color_8hpp_source.html  Component_8hpp.html  Component_8hpp.js  Component_8hpp_source.html  Core_8hpp.html  Core_8hpp_source.html  Engine_8hpp.html  Engine_8hpp.js  Engine_8hpp_source.html  FileIO_8hpp.html  FileIO_8hpp.js  FileIO_8hpp_source.html  GameObject_8hpp.html  GameObject_8hpp.js  GameObject_8hpp_source.html  GameObject_8inl.html  GameObject_8inl.js  GameObject_8inl_source.html  Graphics_8hpp.html  Graphics_8hpp_source.html  Input_8hpp.html  Input_8hpp.js  Input_8hpp_source.html  Keyboard_8hpp.html  Keyboard_8hpp.js  Keyboard_8hpp_source.html  Logger_8hpp.html  Logger_8hpp_source.html  Material_8hpp.html  Material_8hpp.js  Material_8hpp_source.html  MeshRendererComponent_8hpp.html  (+110 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  enumvalues_13.js  enumvalues_14.js  enumvalues_15.js  (+54 more)
doxygen/: Doxyfile
editor/: editor.cpp
editor/include/: ContentBrowserWindow.hpp  FileDialog.hpp  ImGuiConfig.hpp  ProjectManager.hpp  SettingsWindow.hpp  StatsWindow.hpp
editor/src/: ContentBrowserWindow.cpp  FileDialog.cpp  FileDialog.hpp  ImGuiConfig.cpp  ProjectManager.cpp  SettingsWindow.cpp  StatsWindow.cpp
include/Quack/: Bindings.hpp  Core.hpp  Graphics.hpp  Math.hpp  Scene.hpp  Utils.hpp
include/Quack/Core/: Engine.hpp  Input.hpp  Key.hpp  Keyboard.hpp  Mouse.hpp  Stats.hpp  Time.hpp  Window.hpp
include/Quack/Graphics/: Color.hpp  Color8.hpp  Framebuffer.hpp  GlobalLight.hpp  Material.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Vertex.hpp
include/Quack/Math/: Math.hpp  Matrix3.hpp  Matrix4.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/Quack/Scene/: CameraComponent.hpp  Component.hpp  GameObject.hpp  GameObject.inl  IJsonSerializable.hpp  MeshRendererComponent.hpp  Scene.hpp  SceneManager.hpp  ScriptComponent.hpp  Transform.hpp  TransformComponent.hpp
include/Quack/Scripting/: ILuaBindable.hpp
include/Quack/Scripting/Bindings/: GameObjectBinding.hpp  InputBinding.hpp  KeyboardBinding.hpp  MouseBinding.hpp  TransformBinding.hpp  Vector2Binding.hpp  Vector3Binding.hpp
include/Quack/Utils/: AssetDatabase.hpp  FileIO.hpp  LogLevel.hpp  Logger.hpp  MeshManager.hpp  TextureManager.hpp  UUID.hpp
resources/scripts/: movement.lua  rotate.lua
resources/shaders/: global_light.frag  global_light.vert  universal.frag  universal.vert  unlit.frag  unlit.vert
src/Quack/Core/: Engine.cpp  Input.cpp  Stats.cpp  Time.cpp  Window.cpp
src/Quack/Graphics/: Color.cpp  Color8.cpp  Framebuffer.cpp  GlobalLight.cpp  Mesh.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Texture.cpp
src/Quack/Math/: Math.cpp  Matrix3.cpp  Matrix4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Quack/Scene/: CameraComponent.cpp  GameObject.cpp  MeshRendererComponent.cpp  Scene.cpp  SceneManager.cpp  ScriptComponent.cpp  Transform.cpp  TransformComponent.cpp
src/Quack/Scripting/Bindings/: GameObjectBinding.cpp  InputBinding.cpp  KeyboardBinding.cpp  MouseBinding.cpp  TransformBinding.cpp  Vector2Binding.cpp  Vector3Binding.cpp
src/Quack/Utils/: AssetDatabase.cpp  FileIO.cpp  Logger.cpp  MeshManager.cpp  TextureManager.cpp  UUID.cpp
